# relay

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitleaks.toml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  TRADEMARK.md  cdk.json  docker-compose.ui-dev.yml  docker-compose.yml  install.sh  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
config/: README.md  catalog.example.yaml  catalog.yaml  contacts.test.yaml  environments.example.yaml  environments.yaml  escalation.example.yaml  hierarchy.example.yaml  hierarchy.yaml  routing.example.yaml
docs/: architecture.md  byor.md  configure.md  contributing.md  coverage.md  deploy.md  domains.md  fleet-team-mockup.md  index.md  install.md  integrations.md  local-dev.md  operate.md  scheduling.md  security.md  status.md  vision.md
infra/: README.md  RUNNER_IAM.md  app.py
prompts/: README.md  author-adapter.md  author-skill.md  configure.md  deploy-byor.md  deploy-federated-hub.md  deploy-team.md  install.md  operate-incident.md  troubleshoot-deploy.md  upgrade-aws-cli.md
scripts/: relay-apply-byor-policies.sh  relay-bootstrap.sh  relay-build-hub-image.sh  relay-context.sh  relay-deploy-direct.sh  relay-deploy.sh  relay-down.sh  relay-entrypoint.sh  relay-fire.sh  relay-get-latest-image.sh  relay-local-bootstrap.py  relay-preflight.sh  relay-provision-cli.sh  relay-seed-contacts.sh  relay-setup-oidc.sh  relay-spec-publish.sh  relay-synth-release-templates.sh  relay-synth.sh  relay-teardown-cli.sh  relay-teardown-direct.sh  relay-up.sh  (+2 more)
(+340 files in other folders)
